apps/applications/media/bazarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: ghcr.io/home-operations/bazarr:1.5.2
          ports:
            - name: http
              containerPort: 6767
              protocol: TCP
          startupProbe:
            httpGet:
              path: /api/system/ping
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/system/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/system/ping
              port: http
          volumeMounts:
            - name: video-series-mount
              mountPath: /tv # Path inside the container
            - name: video-movies-mount
              mountPath: /movies
            - name: video-anime-mount
              mountPath: /anime
            - name: config
              mountPath: /config
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 100
        runAsNonRoot: true
        runAsUser: 1026
      volumes:
        - name: video-movies-mount
          persistentVolumeClaim:
            claimName: video-movies-pvc
        - name: video-series-mount
          persistentVolumeClaim:
            claimName: video-series-pvc
        - name: video-anime-mount
          persistentVolumeClaim:
            claimName: video-anime-pvc
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
