apps/applications/media/bazarr/app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "bazarr.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bazarr
          port: 6767
